# OpsAI

./: .gitignore  .opsai_history.json  README.md  config.example.toml  ngdemo.conf  opsai.py  pyproject.toml
opsai/: __main__.py  cli.py
tests/: test_cli.py
